<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

   <!-- <parent>
        <groupId>com.atlassian.pom</groupId>
        <artifactId>public-pom</artifactId>
        <version>3.0.90</version>
    </parent>
-->
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.valueglobal.jira.plugins.colorpiechart</groupId>
    <artifactId>pmo-dashboard-piechart</artifactId>
    <packaging>atlassian-plugin</packaging>
    <version>1.0-SNAPSHOT</version>

    <description>JIRA Plugin for PMO Dashboard Pie Chart</description>

 <!--   <scm>
        <connection>scm:git:git@bitbucket.org:atlassian/jira-charting-plugin.git</connection>
        <developerConnection>scm:git:git@bitbucket.org:atlassian/jira-charting-plugin.git</developerConnection>
        <url>https://bitbucket.org/atlassian/jira-charting-plugin</url>
      <tag>HEAD</tag>
  </scm>

    <licenses>
        <license>
            <name>BSD</name>
            <url>http://www.opensource.org/licenses/bsd-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
-->
    <organization>
        <name>Value Global</name>
        <url>http://www.valueglobal.net</url>
    </organization>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.twdata.maven</groupId>
                    <artifactId>maven-cli-plugin</artifactId>
                    <version>1.0.10</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-jira-plugin</artifactId>
                <version>${amps.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <productVersion>${jira.version}</productVersion>
                    <productDataVersion>${jira.data.version}</productDataVersion>
					<jvmArgs>-Xmx768m -XX:MaxPermSize=384m</jvmArgs>
                <!--    <pluginArtifacts>
						<pluginArtifact>
							<groupId>com.atlassian.jira.tests</groupId>
							<artifactId>jira-testkit-plugin</artifactId>
							<version>${testkit.version}</version>
						</pluginArtifact>
                        <pluginArtifact>
                            <groupId>com.atlassian.jira</groupId>
                            <artifactId>jira-func-test-plugin</artifactId>
                            <version>${jira.version}</version>
                        </pluginArtifact>
	                </pluginArtifacts> -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-clover2-plugin</artifactId>
                <configuration>
                    <targetPercentage>50%</targetPercentage>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.twdata.maven</groupId>
                <artifactId>maven-cli-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
						<configuration>
							<forceCreation>true</forceCreation>
						</configuration>
					</execution>
				</executions>
			</plugin>
		<!--	<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>${maven.test.unit.skip}</skip>
					<excludes>
						<exclude>**/it/**</exclude>
						<exclude>**/*$*</exclude>
					</excludes>
				</configuration>
			</plugin> -->
        </plugins> 
	<!--	<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>src/test/xml</directory>
				<targetPath>xml</targetPath>
			</testResource>
		</testResources> -->
    </build>

    <dependencies>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-core</artifactId>
            <version>${jira.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-api</artifactId>
            <version>${jira.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-rest-plugin</artifactId>
            <version>${jira.rest.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.atlassian.plugins.rest</groupId>
                    <artifactId>com.atlassian.jersey-library</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- we need this because Jersey 1.5 (used in func tests) relies on it -->
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>jsr311-api</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.4</version>
            <scope>test</scope>
        </dependency>
      <!--  <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-tests</artifactId>
            <version>${jira.test.lib.version}</version>
            <scope>test</scope>
        </dependency> -->
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-jaxrs</artifactId>
            <version>1.6.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>1.6.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.6.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-core</artifactId>
            <version>1.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-client</artifactId>
            <version>1.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey.contribs</groupId>
            <artifactId>jersey-apache-client</artifactId>
            <version>1.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-xc</artifactId>
            <version>1.6.1</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	<!--	<dependency>
			<groupId>com.atlassian.jira</groupId>
			<artifactId>jira-nimble-func-tests</artifactId>
			<version>${jira.nimble-func-tests.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.atlassian.jira</groupId>
			<artifactId>jira-func-tests</artifactId>
			<version>${jira.test.lib.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.sun.jersey</groupId>
					<artifactId>jersey-server</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		-->
		<dependency>
			<groupId>com.atlassian.plugins.rest</groupId>
			<artifactId>atlassian-rest-module</artifactId>
			<version>2.9.13</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

    <properties>
        <amps.version>5.0.21</amps.version>
        <atlassian.plugin.key>net.valueglobal.jira.plugins.colorpiechart</atlassian.plugin.key>
        <atlassian.plugin.application.version.min>5.0</atlassian.plugin.application.version.min>
        <atlassian.plugin.application.version.max>5.99</atlassian.plugin.application.version.max>

		<jira.version>6.4-OD-15-055</jira.version>
		<jira.rest.version>${jira.version}</jira.rest.version>
		<jira.test.lib.version>${jira.version}</jira.test.lib.version>
		<jira.data.version>${jira.version}</jira.data.version>

		<testkit.version>6.0.46</testkit.version>
	<!--	<func-test-basic>1.9.6</func-test-basic>
		<jira.nimble-func-tests.version>0.2.1</jira.nimble-func-tests.version>
		<maven.test.unit.skip>false</maven.test.unit.skip> -->
    </properties>
    <name>PMO Dashboard Pie Chart</name>
</project>